Draw the rectangle and adding Cell.h and Cell.cpp

--- a/GameofLife.vcxproj
+++ b/GameofLife.vcxproj
@@ -19,10 +19,12 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Cell.cpp" />
     <ClCompile Include="Grid.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Cell.h" />
     <ClInclude Include="Grid.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
